# fast-llm

./: .gitignore  README.md  main.py  pyproject.toml
app/: api.py  config.py
app/model/: auth.py  user.py
app/routes/: auth.py  chat.py  glm.py  user.py
app/utils/: authentication.py
app/utils/constant/: query.py
